<resources>
    <string name="app_name">Leaf</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation Bar</string>
    <string name="navigation_drawer_close">Close navigation Bar</string>
    <string name="plantas">Plantas</string>
    <string name="inicio">Inicio</string>
    <string name="agregar_planta">Agregar Planta</string>
    <string name="ver_plantas">Ver Plantas</string>
    <string name="vender_plantas">Vender Plantas</string>
    <string name="agregar_clientes">Agregar Clientes</string>
    <string name="ver_clientes">Ver Clientes</string>
    <string name="precio">Precio:</string>
    <string name="detalles">Detalles</string>
    <string name="agregar">Agregar</string>
    <string name="direccion">Direccion:</string>
    <string name="direccion_dialog">Direccion</string>
    <string name="telefono_dialog">Telefono:</string>
    <string name="numero_de_telefono_dialog">Numero de telefono</string>
    <string name="eliminar_dialog">Eliminar</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="aceptar_dialog">Aceptar</string>
    <string name="cantidad_dialog_planta">Cantidad:</string>
    <string name="precio_dialog_planta">Precio:</string>
    <string name="eliminar_dialog_planta">Eliminar</string>
    <string name="cancelar_dialog_planta">Cancelar</string>
    <string name="guardar_dialog_planta">Guardar</string>
    <string name="titulo_dialog_tipo_planta">Ingresar un nuevo tipo de planta</string>
    <string name="tipo_de_planta_dialog_tipo_planta">Tipo de planta</string>
    <string name="cancelar_dialog_tipo_planta">Cancelar</string>
    <string name="crear_dialog_tipo_planta">Crear</string>
    <string name="nombre_buscar_cliente">Nombre</string>
    <string name="dni_buscar_cliente">Dni</string>
    <string name="buscar_buscar_cliente">Buscar</string>
    <string name="buscar_cliente_carrito">Buscar Cliente</string>
    <string name="nombre_carrito">Nombre y Apellido</string>
    <string name="dni_carrito">DNI</string>
    <string name="telefono_carrito">Telefono</string>
    <string name="total_carrito">Total:</string>
    <string name="importe_carrito">Importe</string>
    <string name="realizar_venta_carrito">Realizar Venta</string>
    <string name="agenda_crear_cliente">Agenda</string>
    <string name="confirmar_crear_cliente">Confirmar</string>
    <string name="nombre_crear_cliente">Ingrese nombre y apellido del cliente</string>
    <string name="dni_crear_cliente">Ingrese DNI del cliente</string>
    <string name="tel_crear_cliente">Ingrese Nº Telefono del cliente</string>
    <string name="dir_crear_cliente">Ingrese direccion del cliente</string>
    <string name="cantidad_crear_planta">Cantidad:</string>
    <string name="cantidad_crear_planta_hint">Cantidad</string>
    <string name="nombre_crear_planta">Nombre:</string>
    <string name="nombre_crear_planta_hint">Nombre de la planta</string>
    <string name="descripcion_crear_planta">Descripcion:</string>
    <string name="descripcion_crear_planta_hint">Descripcion de la planta</string>
    <string name="tipo_crear_planta">Tipo:</string>
    <string name="precio_crear_planta">Precio:</string>
    <string name="precio_crear_planta_hint">Precio</string>
    <string name="confirmar_crear_planta">Confirmar</string>
    <string name="agregar_foto_crear_planta">Agregar Foto</string>
    <string name="fecha_home">Fecha Actual:</string>
    <string name="deudores_home">Deudores:</string>
    <string name="falta_de_stock_home">Falta de Stock:</string>
    <string name="fecha_value_home">23/07/20</string>
    <string name="nombre_ver_plantas">Nombre de planta</string>
    <string name="nombre_item_cliente">Nombre y Apellido:</string>
    <string name="nombre_item_cliente_value">Nombre</string>
    <string name="dni_item_cliente">DNI:</string>
    <string name="dni_item_cliente_value">DNI</string>
    <string name="nro_telefono_item_cliente">Nro. Telefono:</string>
    <string name="nro_item_cliente_value">NRO</string>
    <string name="direccion_item_cliente">Direccion:</string>
    <string name="direccion_item_cliente_value">Direccion 123</string>
    <string name="seleccionar_item_cliente">Selecc/Modif</string>
    <string name="nombre_item_carrito">Nombre</string>
    <string name="precio_item_carrito">$precio</string>
    <string name="clientes_drawer">Clientes</string>
    <string name="detalles_drawer">Detalles</string>
</resources>