<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/direccion" />

        <EditText
            android:id="@+id/telefono_modificar_cliente"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:ems="10"
            android:hint="@string/direccion_dialog"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/telefono_dialog" />

        <EditText
            android:id="@+id/direccion_modificar_cliente"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:ems="10"
            android:hint="@string/numero_de_telefono_dialog"
            android:inputType="textPersonName" />
    </LinearLayout>
    <Button
        android:id="@+id/eliminar_modif_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="3dp"
        android:text="@string/eliminar_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelar_modificar_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/cancelar_dialog" />

        <Button
            android:id="@+id/aceptar_modificar_cliente"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/aceptar_dialog" />
    </LinearLayout>

</LinearLayout>