<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/agendaButton"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="50dp"
        android:text="@string/agenda_crear_cliente"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirmarClienteButton"
        android:layout_width="140dp"
        android:layout_height="49dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="106dp"
        android:text="@string/confirmar_crear_cliente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="81dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/confirmarClienteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agendaButton">

        <EditText
            android:id="@+id/nombreClienteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_crear_cliente"
            android:inputType="textPersonName"
            android:paddingVertical="20dp"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="216dp" />

        <EditText
            android:id="@+id/dniClienteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dni_crear_cliente"
            android:inputType="number"
            android:paddingVertical="20dp"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="345dp" />

        <EditText
            android:id="@+id/nroTelefonoClienteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tel_crear_cliente"
            android:inputType="number"
            android:paddingVertical="20dp"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="409dp" />

        <EditText
            android:id="@+id/direccionClienteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dir_crear_cliente"
            android:inputType="textPersonName"
            android:paddingVertical="20dp"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="474dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>