<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CrearPlantaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.CrearPlantaFragment">


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="51dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <TextView
                    android:id="@+id/cantidadTV"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/cantidad_crear_planta"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/cantidadET"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/cantidad_crear_planta_hint"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <TextView
                    android:id="@+id/nombrePlantaTV"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/nombre_crear_planta"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nombrePlantaET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre_crear_planta_hint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <TextView
                    android:id="@+id/descripcionPlantaTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_crear_planta"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/descripcionPlantaET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/descripcion_crear_planta_hint"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:minLines="0"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tipoPlantaTV"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right|center_vertical"
                    android:text="@string/tipo_crear_planta"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/tipoPlantaSpinner"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center" />

                <ImageButton
                    android:id="@+id/addTipoPlantaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:src="@drawable/ic_baseline_add_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="15dp">

                <TextView
                    android:id="@+id/precioTV"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/precio_crear_planta"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/precioET"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/precio_crear_planta_hint"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/confirmarPlantaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="145dp"
            android:text="@string/confirmar_crear_planta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plantaImageView" />

        <ImageView
            android:id="@+id/plantaImageView"
            android:layout_width="338dp"
            android:layout_height="210dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_launcher_foreground"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fotoButton" />

        <Button
            android:id="@+id/fotoButton"
            android:layout_width="229dp"
            android:layout_height="48dp"
            android:layout_marginStart="91dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="91dp"
            android:text="@string/agregar_foto_crear_planta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
