<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/nombre_buscarCliente_et"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="@string/nombre_buscar_cliente"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dni_buscarCliente_et"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="@string/dni_buscar_cliente"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar_buscar_cliente"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clientesRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>